# openmagic

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  MISTAKES.md  README.md  alembic.ini  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/openmagic_api/: __init__.py  __main__.py  app.py  renewals.py
apps/playground/: README.md  pyproject.toml
apps/playground/src/openmagic_playground/: __init__.py  __main__.py  _control_scenario.py  _failure_scenario.py  _network.py  _renewal_scenario.py  _scenario_support.py  _verification_observation.py  _verification_scenario.py  demonstrations.py  deployment.py  deployment_observation.py  process_launching.py  renewal_observation.py  reset.py  responses.py  synthetic_provider.py  verification_response.py
apps/playground/tests/: test_renewal_observation.py
evals/: pyproject.toml
evals/src/openmagic_evals/: __init__.py  heldout_seal.json
evals/src/openmagic_evals/evidence/: __init__.py  __main__.py  _definition_correlations.py  _execution_config.py  _inspection_base.py  _inspection_demo.py  _inspection_durable_chain.py  _inspection_process.py  _inspection_race.py  _live_provider_attempt.py  _live_smoke_projection.py  _owned_command.py  _race_contender_process.py  _race_operations.py  _race_persistence.py  _race_transport.py  _sealed_agent_corpus.py  agent_aggregation.py  agent_artifact.py  agent_boundary_trials.py  agent_cases.py  agent_corpus_phase.py  agent_experiment.py  agent_models.py  agent_projection.py  agent_quality.py  agent_scoring.py  agent_trial_models.py  agent_trials.py  artifact_io.py  audit.py  availability_models.py  case_recording.py  claims.py  contracts.py  core_models.py  deadline.py  demos.py  deterministic_models.py  deterministic_observations.py  (+38 more)
evals/src/openmagic_evals/harness/: __init__.py  _network.py  _postgres.py  deployment.py  email_provider.py  fence_once.py  local_provider.py  renewal_scenario.py  synthetic_reset.py  verification_scenario.py  verifier.py
evals/tests/: evidence_repository.py  test_api_renewal_submission.py  test_foundation_architecture.py  test_foundation_boot.py  test_foundation_database.py  test_foundation_wheels.py  test_issue71_agent_quality.py  test_issue71_backpressure.py  test_issue71_claims.py  test_issue71_delivery_claim_replay.py  test_issue71_demos.py  test_issue71_evidence_contract.py  test_issue71_lease_boundaries.py  test_issue71_live_smoke.py  test_issue71_owned_commands.py  test_issue71_playground.py  test_issue71_playground_boundaries.py  test_issue71_playground_provider.py  test_issue71_postgres_provenance.py  test_issue71_process_pools.py  test_issue71_race_corpus.py  test_issue71_release_matrix.py  test_issue71_surface_audit.py  test_kernel_attempt_guard.py  test_kernel_signal_race.py  test_renewal_approval.py  test_renewal_drafting.py  test_renewal_effect.py  test_renewal_effect_recovery.py  test_renewal_lifecycle.py  test_renewal_lock_order.py  test_renewal_provider_effect.py  test_verification.py  test_verification_contract.py  test_verification_delivery.py  test_verification_evidence.py  test_verification_policy.py  test_verification_process.py
evals/tests/support/: issue71_atomic_api_process.py
reference-apps/example-insurance/: pyproject.toml
reference-apps/example-insurance/src/example_insurance/: __init__.py  application_event_records.py  application_registry.py  migrations.py  readiness.py  renewal_approval.py  renewal_approval_policy.py  renewal_approval_records.py  renewal_attempt_control.py  renewal_attempt_records.py  renewal_attempts.py  renewal_command_records.py  renewal_commands.py  renewal_completion.py  renewal_completion_policy.py  renewal_completion_records.py  renewal_decisions.py  renewal_definition.py  renewal_effect_control.py  renewal_effect_policy.py  renewal_effect_records.py  renewal_effect_types.py  renewal_effects.py  renewal_evidence.py  renewal_evidence_records.py  renewal_facts.py  renewal_grant_records.py  renewal_lifecycle.py  renewal_lifecycle_policy.py  renewal_lifecycle_records.py  renewal_policies.py  renewal_records.py  renewal_registry.py  renewal_review_control.py  renewal_submission.py  renewal_worker_control.py  renewal_workflow_records.py  renewals.py  reset.py  verification_attempt_control.py  (+17 more)
reference-apps/example-insurance/src/example_insurance/_persistence/: __init__.py  application_event_records.py  bundle.py  durable_values.py  renewal_approval_records.py  renewal_attempt_records.py  renewal_command_records.py  renewal_completion_records.py  renewal_decision_records.py  renewal_effect_records.py  renewal_evidence_records.py  (+10 more)
reference-apps/example-insurance/tests/: test_renewal_policies.py
(+270 files in other folders)
