[project]
name = "openmagic"
version = "0.4.0"
description = "A durable workflow control plane for OpenMagic"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "alembic>=1.18.5,<2.0.0",
    "beautifulsoup4>=4.12.0",
    "composio==0.17.1",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "ruff>=0.15.0,<0.16.0",
    "testcontainers[postgres]>=4.10.0,<5.0.0",
    "ty>=0.0.54,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"server/tests/**" = ["S101"]
