[project]
name = "openmagic-evals"
version = "0.1.0"
description = "Private deterministic evidence harness for OpenMagic"
requires-python = ">=3.11,<3.15"
dependencies = [
    "example-insurance==0.1.0",
    "openmagic-api==0.1.0",
    "openmagic-runtime==0.1.0",
    "psycopg[binary]>=3.3.0,<4.0.0",
    "testcontainers[postgres]>=4.10.0,<5.0.0",
]

[project.scripts]
openmagic-local-email-provider = "openmagic_evals.harness.email_provider:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmagic_evals"]
