[project]
name = "openmagic-api"
version = "0.1.0"
description = "FastAPI composition package for OpenMagic deployments"
requires-python = ">=3.11,<3.15"
dependencies = [
    "example-insurance==0.1.0",
    "fastapi>=0.115.0,<1.0.0",
    "openmagic-runtime==0.1.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
openmagic-api = "openmagic_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openmagic_api"]
